--- a/app/src/main/res/layout/gallery_selection_label.xml
+++ b/app/src/main/res/layout/gallery_selection_label.xml
@@ -44,11 +44,11 @@
         android:id="@+id/labelCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Image Label: "
-        android:textSize="18dp"
+        android:text="@string/image_label"
+        android:textSize="18sp"
         android:textColor="@color/colorAccent"
         android:layout_marginBottom="2dp"
-        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"/>
 
 
@@ -63,18 +63,19 @@
         android:layout_marginRight="25dp"
         android:layout_marginBottom="10dp"
         android:textColor="?attr/textColor"
-        android:hint="Classification label"
-        android:textColorHint="@color/grey" />
+        android:hint="@string/classification_label"
+        android:textColorHint="@color/grey"
+        android:autofillHints="@string/classification_label" />
 
     <CheckBox
         android:id="@+id/labelCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Label all images with this category"
+        android:text="@string/label_all_images_with_this_category"
         android:layout_below="@id/editTextCategory"
-        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
         android:textColor="?attr/textColor"
-        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
         android:buttonTint="@color/colorAccent"
         android:layout_marginBottom="50dp"/>
 
@@ -83,7 +84,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_design"
-        android:text="Save Images"
+        android:text="@string/save_images"
         android:layout_below="@id/labelCheckBox"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"/>
