--- a/app/src/main/res/layout/fragment_preview_image.xml
+++ b/app/src/main/res/layout/fragment_preview_image.xml
@@ -23,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/captured_imaage" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -39,6 +40,7 @@
         android:layout_below="@id/image"
         android:clickable="true"
         android:focusable="true"
-        android:elevation="8dp"/>
+        android:elevation="8dp"
+        android:contentDescription="@string/save_button" />
 
 </RelativeLayout>
