--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -5,5 +5,6 @@
     android:layout_height="match_parent"
     android:background="@color/imageExcessBackground"
     tools:viewBindingIgnore="true"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:contentDescription="@string/datasetimage">
 </ImageView>
