--- a/app/src/main/res/layout/image_display.xml
+++ b/app/src/main/res/layout/image_display.xml
@@ -17,7 +17,7 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        android:contentDescription="@string/datasetimage" />
 
     <CheckBox
         android:id="@+id/imageCheckBox"
@@ -35,10 +35,10 @@
             android:layout_height="wrap_content"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent="1"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:gravity="center"
-            android:text="label"
+            android:text="@string/classification_label"
             android:background="?attr/imageLabelBackground"
             android:textColor="?attr/textColor"
             app:layout_constraintTop_toBottomOf="@id/gridImageView"
