Changed the preview image layout to align the prediction details text to the top of the screen and make the textview appear transparent.

--- a/app/src/main/res/layout/fragment_preview_image.xml
+++ b/app/src/main/res/layout/fragment_preview_image.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black">
 
-    <TextView
-        android:id="@+id/predictionText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/image"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="15dp"
-        android:textColor="@color/white"
-        android:textSize="15sp" />
-
-
     <ImageView
         android:id="@+id/image"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/captured_imaage" />
+        android:contentDescription="@string/captured_image" />
+
+    <TextView
+        android:id="@+id/predictionText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+        android:background="#993a3a3a"
+        android:layout_alignParentTop="true"
+        android:textAlignment="center"/>
+
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -36,11 +36,11 @@
         android:src="@drawable/ic_baseline_save_24"
         android:background="@drawable/floating_button_background"
         android:textColor="?attr/textColor"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/image"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
         android:clickable="true"
         android:focusable="true"
         android:elevation="8dp"
         android:contentDescription="@string/save_button" />
-
 </RelativeLayout>
