--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -30,13 +30,27 @@
         app:maxImageSize="35dp"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="15dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignWithParentIfMissing="true"
         android:layout_alignParentEnd="true"
         android:backgroundTint="@color/red"
         app:borderWidth="0dp"
         android:src="@drawable/ic_baseline_add_24"
         android:tint="@color/float_transparent"
         android:contentDescription="@string/add_dataset"
-        android:elevation="8dp" />
+        android:elevation="8dp"
+        android:layout_above="@id/cancelDownload"/>
+
+    <Button
+        android:id="@+id/cancelDownload"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/white"
+        android:background="#C62828"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:text="@string/cancel_download"
+        android:layout_below="@id/cancelDownload"
+        android:padding="10dp"
+        android:visibility="gone"/>
 
 </RelativeLayout>
