--- a/app/src/main/res/layout/new_dataset.xml
+++ b/app/src/main/res/layout/new_dataset.xml
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/license"
-        android:text="@string/licence"
+        android:text="@string/license_header"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/grey"
         android:textSize="@dimen/settingsLabelSizes" />
